# chat-api

./: .flake8  Dockerfile  README.md  app.docker-compose.yml  pg.docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 6708665ab3af_auto_migration.py  a98d53db6d7f_auto_migration.py
src/: app.py  log.py
src/api/: __init__.py  dependencies.py
src/api/exception_handlers/: chat.py
src/api/routes/: chats.py
src/api/schemas/: __init__.py  chat.py  message.py
src/core/: config.py
src/core/exceptions/: chat.py
src/core/services/: chat.py
src/db/: models.py  session_maker.py
src/db/repositories/: _base.py  chat.py  message.py
src/infrastructure/db/: session_maker.py
src/infrastructure/db/repositories/: __init__.py  chat.py  message.py
src/tests/: conftest.py
tests/test_api/: conftest.py  test_chats_api.py
